--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "boxicons": "^2.1.4",
     "next": "15.1.3",
     "react": "^19.0.0",
