--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,10 @@
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "boxicons": "^2.1.4",
+    "cookie": "^1.0.2",
+    "cookies": "^0.9.1",
+    "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
